# mpi-pwir

./: .gitignore  raport.tex  readme.md  sparse-matmul.html
kp332534/: CMakeLists.txt  Debug.hpp  DenseMatrix.cpp  DenseMatrix.hpp  Matrix.cpp  Matrix.hpp  Misc.cpp  Misc.hpp  SparseMatrix.cpp  SparseMatrix.hpp  Utils.hpp  densematgen.cpp  impl.cpp  impl.hpp  matrixmul.cpp  test.cpp
